--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8"
   }
 }
