--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "lib": ["ES2020"],
     "outDir": "build/",
-    "sourceMap": true
+    "sourceMap": true,
+    "strict": true
   },
   "exclude": ["build/", "node_modules/"],
   "include": ["src/"]
