--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   build_runner: ^2.1.8
   json_serializable: ^6.1.5
+  provider: ^6.0.2
 
 flutter:
   generate: true
