--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shared_preferences: ^2.0.13
   http: ^0.13.4
   json_annotation: ^4.4.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -30,7 +31,8 @@ flutter:
   generate: true
   uses-material-design: true
 
-  # assets:
+  assets:
+    - .env
 
   fonts:
     - family: Poppins
