--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
-    "tsc": "^2.0.4"
+    "typescript": "^4.6.2"
   },
   "scripts": {
     "start": "node .",
