--- a/app/.vscode/launch.json
+++ b/app/.vscode/launch.json
@@ -7,7 +7,8 @@
     {
       "name": "flutter",
       "request": "launch",
-      "type": "dart"
+      "type": "dart",
+      "toolArgs": ["--dart-define", "API_AUTHORITY=localhost:4006"]
     },
     {
       "name": "flutter (profile mode)",
