--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   shared_preferences: ^2.0.13
   http: ^0.13.4
   json_annotation: ^4.4.0
-  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -31,8 +30,7 @@ flutter:
   generate: true
   uses-material-design: true
 
-  assets:
-    - env.env
+  # assets:
 
   fonts:
     - family: Poppins
