--- a/app/windows/runner/Runner.rc
+++ b/app/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.sure" "\0"
             VALUE "FileDescription", "A new Flutter project." "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "jira_api" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "jira_api.exe" "\0"
-            VALUE "ProductName", "jira_api" "\0"
+            VALUE "InternalName", "sure_project_manager" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 com.sure. All rights reserved." "\0"
+            VALUE "OriginalFilename", "sure_project_manager.exe" "\0"
+            VALUE "ProductName", "sure_project_manager" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
