--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -25,6 +25,16 @@ dev_dependencies:
   build_runner: ^2.1.8
   json_serializable: ^6.1.5
   provider: ^6.0.2
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  ios: true
+  android: true
+  remove_alpha_ios: true
+  image_path_ios: "assets/images/launcher_icon/background.png"
+  image_path_android: "assets/images/launcher_icon/background.png"
+  adaptive_icon_background: "assets/images/launcher_icon/background.png"
+  adaptive_icon_foreground: "assets/images/launcher_icon/foreground.png"
 
 flutter:
   generate: true
