--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   shared_preferences: ^2.0.13
   http: ^0.13.4
   json_annotation: ^4.4.0
+  pdf: ^3.7.4
+  file_saver: ^0.1.0
 
 dev_dependencies:
   flutter_test:
