--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   json_annotation: ^4.4.0
   pdf: ^3.7.4
   file_saver: ^0.1.0
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
